Add catalog page

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
 							<label for="st-all">All</label>
 							<input id="new" type="radio" name="stage">
 							<label for="new">New</label>
-							<input id="resale" type="radio">
-							<label for="resale" name="stage">Resale</label>
+							<input id="resale" type="radio" name="stage">
+							<label for="resale">Resale</label>
 						</div>
 					</div>
 					<div class="filter__form-item">
