Add last page. Fix mob ver

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -113,7 +113,7 @@
                               <div class="swiper-button-prev"></div>
                               <div class="swiper-pagination"></div>
                             </div>
-                            <p class="catalog__mark">For sale</p>
+                            <p class="catalog__mark sales">Sales</p>
                             <p class="catalog__sity">Pyrgos, Lymassol</p>
                         </div>
                         <div class="catalog__info">
