--- a/src/living.html
+++ b/src/living.html
@@ -8,7 +8,7 @@
 })
 
 <body>
-	@@include('components/page-blocks/_header.html', {"w":"w"})
+	@@include('components/page-blocks/_header.html')
 	<main class="main living">
         <section class="service__banner living__banner">
             <div class="container">
