--- a/src/con-services.html
+++ b/src/con-services.html
@@ -8,7 +8,7 @@
 })
 
 <body>
-	@@include('components/page-blocks/_header.html', {"w":"w"})
+	@@include('components/page-blocks/_header.html')
 	<main class="main service">
         <section class="service__banner service__banner--con">
             <div class="container">
