--- a/src/contacts.html
+++ b/src/contacts.html
@@ -8,7 +8,7 @@
 })
 
 <body>
-	@@include('components/page-blocks/_header.html', {"w":"w"})
+	@@include('components/page-blocks/_header.html')
 	<main class="main contacts">
         <section class="contacts__map">
             <div id="map"></div>
