--- a/src/imigration.html
+++ b/src/imigration.html
@@ -8,7 +8,7 @@
 })
 
 <body>
-	@@include('components/page-blocks/_header.html', {"w":"w"})
+	@@include('components/page-blocks/_header.html')
 	<main class="main imigration">
         <section class="service__banner imigration__banner">
         </section>
