--- a/src/purchasing.html
+++ b/src/purchasing.html
@@ -8,7 +8,7 @@
 })
 
 <body>
-	@@include('components/page-blocks/_header.html', {"w":"w"})
+	@@include('components/page-blocks/_header.html')
 	<main class="main purchasing">
         <section class="service__banner purchasing__banner">
             <div class="container">
