--- a/src/services.html
+++ b/src/services.html
@@ -8,7 +8,7 @@
 })
 
 <body>
-	@@include('components/page-blocks/_header.html', {"w":"w"})
+	@@include('components/page-blocks/_header.html')
 	<main class="main services">
         <section class="service__banner services__banner">
             <div class="container">
