--- a/src/imigration.html
+++ b/src/imigration.html
@@ -330,8 +330,8 @@
                         </div>
                         </div>
                     </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-n"></div>
+                    <div class="swiper-button-p"></div>
                 </div>
             </div>
         </section>
