--- a/src/index.html
+++ b/src/index.html
@@ -505,17 +505,17 @@
 				</ul>
 				<div class="property-why__items">
 					<div class="property-why__item">
-						<a href="">
+						<a href="about.html">
 							<h3 class="property-why__item-title">About Cyprus</h3>
 						</a>
 					</div>
 					<div class="property-why__item">
-						<a href="">
+						<a href="purchasing.html">
 							<h3 class="property-why__item-title">Home Buying Guide</h3>
 						</a>
 					</div>
 					<div class="property-why__item">
-						<a href="">
+						<a href="taxes.html">
 							<h3 class="property-why__item-title">Taxe Guidance</h3>
 						</a>
 					</div>
